# aiogram-telegram-bot-word-from-word

./: .gitignore  db_info  pyproject.toml
core/: __init__.py
core/connector/: __init__.py
core/database/: __init__.py
core/game/: __init__.py
core/handler/: __init__.py
core/player/: __init__.py
core/session/: __init__.py
core/settings/: __init__.py  bottoms.py  database.py
core/utils/: for_handler.py
